--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.8",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "axios": "0.19.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "4.0.4",
+    "redux-observable": "1.2.0",
+    "reselect": "4.0.0",
+    "rxjs": "6.5.3",
+    "styled-components": "4.4.1",
+    "typesafe-actions": "5.1.0",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -32,5 +37,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "7.7.1",
+    "@types/axios": "0.14.0",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.8",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
+    "@types/react-redux": "7.1.5",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/rx": "4.1.1",
+    "@types/styled-components": "4.4.0",
+    "husky": "3.0.9",
+    "jest": "24.9.0",
+    "prettier": "1.19.1",
+    "ts-jest": "24.1.0",
+    "tslint": "5.20.1",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.0.1",
+    "tslint-react": "4.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn tsc -p tsconfig.json --noEmit --skipLibCheck && tslint -c tslint.json 'src/**/*.{ts,tsx}'"
+    }
   }
 }
