--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "redux": "4.0.4",
     "redux-observable": "1.2.0",
     "reselect": "4.0.0",
@@ -47,6 +48,7 @@
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-select": "^3.0.8",
     "@types/rx": "4.1.1",
     "@types/styled-components": "4.4.0",
     "husky": "3.0.9",
