--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "0.19.0",
+    "luxon": "^1.21.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
@@ -43,6 +44,7 @@
     "@babel/preset-env": "7.7.1",
     "@types/axios": "0.14.0",
     "@types/jest": "24.0.23",
+    "@types/luxon": "^1.21.0",
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
