--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "3.7.2"
   },
   "scripts": {
+    "start-prod": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
